FIX jump to page styling
git-svn-id: http://svn.resourcespace.org/svn/resourcespace@6045 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -89,15 +89,18 @@ input.defaultbutton {position: absolute; left: -100%; width: 0; height: 0;}
 .BottomInpageNav {clear: left;padding-top: 5px;margin: 20px 15px 0px 0px; position:relative;}
 .BottomInpageKey {margin-right: 15px; clear: left; text-align: left;}
 .TopInpageNavLeft{float:left;padding-right:240px;}
-.TopInpageNavRight{position:absolute;right:0;top:0;width:240px;}
+.TopInpageNavRight{position:absolute;right:0;top:0;width:280px;text-align:right;}
 .InpageNavLeftBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 20px 0 0;}
 .InpageNavRightBlock {display:inline-block; *display: inline; *zoom: 1;text-align:left;margin: 0 15px 0 0;}
 .BottomInpageNavLeft {float:left;}
-.BottomInpageNavRight{float:right;margin-right:10px;}
+.BottomInpageNavRight{float:right;margin-right:10px;text-align:right;}
 .BottomInpageNavRight .TopInpageNavRight {position:relative;}
 .TopInpageNav a:link, .TopInpageNav a:visited, .BottomInpageNav a:link, .BottomInpageNav a:visited , #CentralSpaceLogin a:link, #CentralSpaceLogin a:visited {text-decoration:none;}
 .TopInpageNav a:hover, .TopInpageNav a:active, .BottomInpageNav a:hover, .BottomInpageNav a:active, #CentralSpaceLogin a:hover, #CentralSpaceLogin a:active {text-decoration:underline;}
 .Selected {font-weight: bold;}
+#jumppanel1{margin-top:45px !important;padding: 10px;}
+#jumppanel3{margin-top: 20px !important;text-align: right;}
+.TopInpageNav #jumppanel2{margin-top: 35px !important;text-align: right;float: right;}
 
 .HorizontalNav ul {padding:0.2em 0;margin:0;list-style:none;}
 .HorizontalNav li {display:inline;padding:0 0.35em 0 0.5em;margin:0px;}
